Fix s3.putObject call in leader-election-with-s3-conditional-writes.asciidoc

--- a/content/blog/leader-election-with-s3-conditional-writes.asciidoc
+++ b/content/blog/leader-election-with-s3-conditional-writes.asciidoc
@@ -87,7 +87,7 @@ PutObjectRequest put = PutObjectRequest.builder()
   .build();
 
 try {
-  s3.putObject(putOb, RequestBody.fromString("""
+  s3.putObject(put, RequestBody.fromString("""
       {
         "expired": false
       }
