--- a/content/blog/leader-election-with-s3-conditional-writes.asciidoc
+++ b/content/blog/leader-election-with-s3-conditional-writes.asciidoc
@@ -12,6 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
+_Update Aug 30: This article is discussed on https://news.ycombinator.com/item?id=41357123[Hacker News] and https://lobste.rs/s/ljq5pm/leader_election_with_s3_conditional[lobste.rs]._
+
 In distributed systems, for instance when scaling out some workload to multiple compute nodes,
 it is a common requirement to select a _leader_ for performing a given task:
 only one of the nodes should process the records from a Kafka topic partition, write to a file system, call a remote API, etc.
