--- a/content/blog/cdc-is-a-feature-not-a-product.asciidoc
+++ b/content/blog/cdc-is-a-feature-not-a-product.asciidoc
@@ -38,8 +38,9 @@ Liberty for your data--rejoice!
 But it's that, an enabler.
 CDC isn't really that useful on its own.
 You ingest data change events into Kafka, and then what?
-At the very least, you want to have sink connectors which take that data and put it elsewhere,
-be it a DWH, S3, a search index, or something else.
+At the very least, you want to have sink connectors which take that data and put it elsewhere.
+For a successful product, you need to solve a problem people have.
+And that problem rarely is "Take my data from Postgres to Kafka", and much more often is "Take my data from Postgres to Snowflake/Elasticsearch/S3".
 Very often, you also want to put some processing to your change event streams,
 e.g. to filter, transform, denormalize, or aggregate them.
 
