Clarifying that Shipilev's builds are only for Linux

--- a/content/blog/building-openjdk-from-source-on-macos.asciidoc
+++ b/content/blog/building-openjdk-from-source-on-macos.asciidoc
@@ -102,5 +102,6 @@ OpenJDK 64-Bit Server VM (build 24-internal-adhoc.gunnarmorling.jdk, mixed mode)
 And that's it, you now have your own JDK build you can use for testing.
 Pretty easy, right?
 That said, if you still don't feel like running this build by yourself,
+and if you're on Linux rather than macOS,
 you also can check out the https://builds.shipilev.net/[OpenJDK builds] provided by Aleksey Shipilëv,
 which are provided for a variety of OpenJDK projects as well as target platforms.
