--- a/content/blog/thoughts-on-moving-debezium-to-commonhaus-foundation.asciidoc
+++ b/content/blog/thoughts-on-moving-debezium-to-commonhaus-foundation.asciidoc
@@ -23,7 +23,7 @@ Of course I am biased, but I think it's fair to say that when it comes to "vendo
 
 > The Debezium project is operated as a community-centric open source project. While Red Hat product management has a voice, it is akin to the same voice of any member of the community, whether they contribute code, bug reports, bug fixes or documentation.
 
-The community has truly lived up to this aspiration and the project has always managed to align the interests of the different parties involved (I only remember a single time where there was a continued discussion about a specific feature and its implementation between the core team and the contributing team, with the idea of forking the project being floated shortly). Nevertheless, ultimately the Debezium project was controlled by a single entity, Red Hat. They owned the name, the domain, the GitHub organization, social media channels, etc. Despite the continued demonstration of best intentions, some folks may have had reservations to contribute to a project managed like that.
+The community has truly lived up to this aspiration and the project has always managed to align the interests of the different parties involved (I only remember a single time where there was a continued discussion about a specific feature and its implementation between the core team and the contributing team, with the idea of forking the project being floated briefly). Nevertheless, ultimately the Debezium project was controlled by a single entity, Red Hat. They owned the name, the domain, the GitHub organization, social media channels, etc. Despite the continued demonstration of best intentions, some folks may have had reservations to contribute to a project managed like that.
 
 That's why I was thrilled to learn that several other projects sponsored and managed by Red Hat, for instance Quarkus and Hibernate, announced their move to the https://www.commonhaus.org/[Commonhaus Foundation] earlier this year. This foundation acts as a 100% neutral home of open-source projects, addressing any potential concerns around ownership which contributors may have. I was hoping for Debezium to make the move to Commonhaus as well, and I could not have been any happier when learning a few weeks back that it actually is going to happen.
 
