--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -14,11 +14,12 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 == Upcoming
 
 * J-Fokus (Stockholm, Sweden; joint hands-on lab with Hans-Peter Grahsl): https://www.jfokus.se/talks/2457[Putting AI Into Real-time ETL with Apache Flink and Debezium]
-* Big Data Europe (Vilnius, Lithunia): https://events.pinetool.ai/3254/#sessions/108024[Data Contracts In Practice With Debezium and Apache Flink]
-* Big Data Europe (Vilnius, Lithunia; panel discussion): https://events.pinetool.ai/3254/#sessions/108731[Building Effective Data Teams: Strategies for Success]
 
 == 2024
 
+* Flink Forward Asia (Jakarta, Indonesia): https://asia.flink-forward.org/jakarta-2024/#agenda[Streaming Data Contracts With Debezium and Apache Flink]
+* Big Data Europe (Vilnius, Lithunia): https://events.pinetool.ai/3254/#sessions/108024[Data Contracts In Practice With Debezium and Apache Flink]
+* Big Data Europe (Vilnius, Lithunia; panel discussion): https://events.pinetool.ai/3254/#sessions/108731[Building Effective Data Teams: Strategies for Success]
 * J-Fall (Ede, Netherlands): https://jfall.nl/timetable/[1BRC–-Nerd Sniping the Java Community]
 * P99 Conf (online): https://www.p99conf.io/session/1brc-nerd-sniping-the-java-community/[1BRC–-Nerd Sniping the Java Community]
 * Flink Forward (Berlin; panel discussion): https://www.flink-forward.org/berlin-2024/agenda#ai-and-apache-flink--expert-panel[AI and Apache Flink: Expert Panel]
