--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -11,9 +11,9 @@ I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOn
 
 If you'd like to have me as a speaker at your conference or meet-up, please get in touch.
 
-== Upcoming
+== 2025
 
-* J-Fokus (Stockholm, Sweden; joint hands-on lab with Hans-Peter Grahsl): https://www.jfokus.se/talks/2457[Putting AI Into Real-time ETL with Apache Flink and Debezium]
+* Current (Bengaluru, India): https://confluent.swoogo.com/currentbengaluru/session/2836222/ins-and-outs-of-the-outbox-pattern[Ins and Outs of the Outbox Pattern]
 
 == 2024
 
