--- a/content/blog/the-synchrony-budget.asciidoc
+++ b/content/blog/the-synchrony-budget.asciidoc
@@ -12,7 +12,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-For building a system of distributed services, one concept I think is very valuable to keep in mind is what I call the "synchrony budget":
+For building a system of distributed services, one concept I think is very valuable to keep in mind is what I call the _synchrony budget_:
 as much as possible, a service should minimize the number of synchronous requests which it makes to other services.
 
 <!--more-->
