--- a/content/blog/the-synchrony-budget.asciidoc
+++ b/content/blog/the-synchrony-budget.asciidoc
@@ -120,4 +120,4 @@ you still have the room to cancel an order if a payment falls through on the asy
 
 Finally, here's how our overall solution of the data flows relevant to the order service could look like, applying the mental model of a synchrony budget:
 
-image:synchrony_budget.png[Synchronous and Asynchronous Data Flows in an E-Commerce System]
+image::synchrony_budget.png[Synchronous and Asynchronous Data Flows in an E-Commerce System]
