--- a/content/blog/the-synchrony-budget.asciidoc
+++ b/content/blog/the-synchrony-budget.asciidoc
@@ -56,7 +56,7 @@ defaulting to asynchronous communication makes a lot of sense.
 In a similar spirit, if any changed data should be propagated from an OLTP data store to an OLAP system,
 this should be done asynchronously.
 By definition, analytical queries issued against the latter don't require instantaneous visibility into each single data change as it is occurring in the OLTP system.
-So sending synchronous requests to an OLAP store would be another good example for unnecessarily your synchrony budget.
+So sending synchronous requests to an OLAP store would be another good example for unnecessarily spending your synchrony budget.
 
 Now, what if our messaging infrastructure, such as Kafka, can't be reached?
 Aren't we back to square one?
