Adding blog post "Let's Take a Look at... JEP 483: Ahead-of-Time Class Loading & Linking!"

--- a/content/blog/kip-932-queues-for-kafka.asciidoc
+++ b/content/blog/kip-932-queues-for-kafka.asciidoc
@@ -12,7 +12,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_In the "Let's Take a Look at…!" blog series I am going to explore interesting projects, developments and technologies in the data and streaming space. This can be KIPs and FLIPs, open-source projects, services, and more. The idea is to get some hands-on experience, learn about potential use cases and applications, and understand the trade-offs involved. If you think there's a specific subject I should take a look at, let me know in the comments below!_
+_In the "Let's Take a Look at...!" blog series I am going to explore interesting projects, developments and technologies in the data and streaming space. This can be KIPs and FLIPs, open-source projects, services, and more. The idea is to get some hands-on experience, learn about potential use cases and applications, and understand the trade-offs involved. If you think there's a specific subject I should take a look at, let me know in the comments below!_
 
 image:kip_932_1.jpg[width=333px]
 
