--- a/content/blog/the-synchrony-budget.asciidoc
+++ b/content/blog/the-synchrony-budget.asciidoc
@@ -12,6 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
+_Update March 27: This post is being  https://news.ycombinator.com/item?id=43452793[discussed on Hacker News]_
+
 For building a system of distributed services, one concept I think is very valuable to keep in mind is what I call the _synchrony budget_:
 as much as possible, a service should minimize the number of synchronous requests which it makes to other services.
 
