Adding HN link 🍊

--- a/content/blog/jep-483-aot-class-loading-linking.asciidoc
+++ b/content/blog/jep-483-aot-class-loading-linking.asciidoc
@@ -14,6 +14,8 @@ endif::[]
 
 _In the "Let's Take a Look at...!" blog series I am exploring interesting projects, developments and technologies in the data and streaming space. This can be KIPs and FLIPs, open-source projects, services, relevant improvements to Java and the JVM, and more. The idea is to get some hands-on experience, learn about potential use cases and applications, and understand the trade-offs involved. If you think there's a specific subject I should take a look at, let me know in the comments below._
 
+_Update March 28: This post is on https://news.ycombinator.com/item?id=43503960[being discussed Hacker News]_ 🍊
+
 https://openjdk.org/projects/jdk/24/[Java 24] got released last week,
 and what a meaty release it is:
 more than twenty Java Enhancement Proposals (JEPs) have been shipped,
