--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -27,10 +27,10 @@ The following information can be used on conference websites.
 
 **Title:** Principal Technoologist, Confluent
 
-**Bio:** Gunnar Morling is a software engineer and open-source enthusiast by heart, currently working as a Technologist at Confluent. In his prior role as a software engineer at Decodable, he helped to build a realtime stream processing platform based on Apache Flink. He led the Debezium project, a distributed platform for change data capture. He is a Java Champion and has founded multiple open source projects such as JfrUnit, kcctl, and MapStruct. Gunnar is an avid blogger (morling.dev) and has spoken at various conferences like QCon, Java One, and Devoxx. He lives in Hamburg, Germany.
+**Bio:** Gunnar Morling is a software engineer and open-source enthusiast by heart, currently working as a Technologist at Confluent. Previously, he helped to build a realtime stream processing platform based on Apache Flink and led the Debezium project, a distributed platform for change data capture. He is a Java Champion and has founded multiple open source projects such as JfrUnit, kcctl, and MapStruct. Gunnar is an avid blogger (morling.dev) and has spoken at various conferences like QCon, Java One, and Devoxx. He lives in Hamburg, Germany.
 
 === 🇩🇪 Deutsch
 
 **Titel:** Principal Technoologist, Confluent
 
-**Bio:** Gunnar Morling ist Softwareentwickler und Open-Source-Enthusiast, gegenwärtig tätig als Technologist für Confluent. Zuvor arbeitete er bei Decodable an einer Plattform für Real-Time Stream Processing basierend auf Apache Flink. Er leitete er das Debezium-Projekt, eine verteilte Lösung für Change Data Capture. Er ist ein Java Champion und hat diverse Open-Source-Projekte wie JfrUnit, kcctl und MapStruct ins Leben gerufen. Gunnar bloggt auf morling.dev und teilt seine Erfahrungen in Vorträgen, u.a. bei JavaLand, QCon, JavaOne und Devoxx. Er lebt und arbeitet in Hamburg.
+**Bio:** Gunnar Morling ist Softwareentwickler und Open-Source-Enthusiast, gegenwärtig tätig als Technologist für Confluent. Zuvor arbeitete er an einer Plattform für Real-Time Stream Processing basierend auf Apache Flink; weiterhin leitete er das Debezium-Projekt, eine verteilte Lösung für Change Data Capture. Er ist ein Java Champion und hat diverse Open-Source-Projekte wie JfrUnit, kcctl und MapStruct ins Leben gerufen. Gunnar bloggt auf morling.dev und teilt seine Erfahrungen in Vorträgen, u.a. bei JavaLand, QCon, JavaOne und Devoxx. Er lebt und arbeitet in Hamburg.
