Adding link to example repo

--- a/content/blog/ingesting-debezium-events-from-kafka-with-flink-sql.asciidoc
+++ b/content/blog/ingesting-debezium-events-from-kafka-with-flink-sql.asciidoc
@@ -391,3 +391,6 @@ only the Postgres connector optionally supports upsert semantics via its https:/
 There are pros and cons for both ways of integrating Debezium and Flink,
 for instance in regards to the replayability of events.
 This warrants a separate blog post just dedicated to comparing both approaches at some point, though.
+
+If you'd like to experiment with the different connectors and data formats for ingesting Debezium data change events from Kafka into Flink SQL by yourself,
+check out https://github.com/gunnarmorling/streaming-examples/tree/main/debezium-kafka-flink-sql-ingest[this project] in my _stream-examples_ repository which contains Flink jobs for all the different configurations.
