--- a/content/blog/ingesting-debezium-events-from-kafka-with-flink-sql.asciidoc
+++ b/content/blog/ingesting-debezium-events-from-kafka-with-flink-sql.asciidoc
@@ -23,7 +23,7 @@ So let's dive into the different options and the considerations around them!
 
 ## Flink SQL Connectors for Apache Kafka
 
-For processing events from a Kafka topic using Flink SQL (or the Flink Table API, which essentially offers a programmatic counterpart to SQL), there are two connectors:
+For processing events from a Kafka topic using Flink SQL (or the Flink Table API, which essentially offers a programmatic counterpart to SQL), there are two connectors provided by the Apache Flink project:
 The https://nightlies.apache.org/flink/flink-docs-release-2.0/docs/connectors/table/kafka/[Apache Kafka SQL connector] and the https://nightlies.apache.org/flink/flink-docs-release-2.0/docs/connectors/table/upsert-kafka/[Upsert Kafka SQL Connector].
 
 Both connectors can be used as a source connector--reading data from a Kafka topic--and as a sink connector, for writing data to a Kafka topic.
