Adding discussion links

--- a/content/blog/what-if-we-could-rebuild-kafka-from-scratch.asciidoc
+++ b/content/blog/what-if-we-could-rebuild-kafka-from-scratch.asciidoc
@@ -12,6 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
+_Update April 25: This post is being discussed on  https://news.ycombinator.com/item?id=43790420[Hacker News], https://lobste.rs/s/8s6cxz/what_if_we_could_rebuild_kafka_from[lobste.rs], and https://old.reddit.com/r/apachekafka/comments/1k6u6jw/what_if_we_could_rebuild_kafka_from_scratch/[/r/apachekafka]_
+
 The last few days I spent some time digging into the recently announced https://cwiki.apache.org/confluence/display/KAFKA/KIP-1150%3A+Diskless+Topics[KIP-1150] ("Diskless Kafka"), as well https://github.com/AutoMQ/automq[AutoMQ's Kafka fork], tightly integrating Apache Kafka and object storage, such as S3. Following the example set by WarpStream, these projects aim to substantially improve the experience of using Kafka in cloud environments, providing better elasticity, drastically reducing cost, and paving the way towards native lakehouse integration.
 
 This got me thinking, if we were to start all over and develop a durable cloud-native event log from scratch--Kafka.next if you will--which traits and characteristics would be desirable for this to have? Separating storage and compute and object store support would be table stakes, but what else should be there? Having used Kafka for many years for building event-driven applications as well as for running realtime ETL and change data capture pipelines, here's my personal wishlist:
