--- a/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
+++ b/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
@@ -178,7 +178,9 @@ In addition to the DataStream API, Flink also provides a relational interface to
 This makes stream processing accessible to a much larger audience:
 all the developers and data engineers who are familiar with SQL.
 Can the TOAST column backfill implemented with a SQL query?
-As it turns out, yes it can:
+As it turns out, yes it can.
+The key idea is to use Flink's link:/blog/ingesting-debezium-events-from-kafka-with-flink-sql/[Apache Kafka SQL connector in append-only mode] for operating on the "raw" stream of Debezium change events and applying the necessary backfill.
+To do so, an https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql/queries/over-agg/[over aggregation] can be applied like so:
 
 [source,sql,linenums=true]
 ----
@@ -207,9 +209,137 @@ FROM
   authors
 ----
 
-## Process Table Functions
+Unlike a regular `GROUP BY` aggregation which condenses multiple input rows into a single output row,
+an over aggregation produces an aggregated value for every input row.
+The `LAST_VALUE()` aggregation function will propagate the last non `NULL` value for the given group.
+By mapping the unvailable value placeholder to `NULL` using `NULLIF()`, this will always be the latest value of the biography column.
+By partitioning the data by id, the aggregation happens in the context of each individual row of the input table.
+
+## Bonus: Process Table Functions
+
+Finally, let's briefly tap into one more alternative approach for backfilling TOAST columns with Flink SQL:
+implementing a custom process table function (PTF).
+PTFs are a new kind of user-defined function (UDF) in Flink SQL, which will be available in Flink 2.1.
+Complementing scalar UDFs already present in earlier Flink SQL versions,
+PTFs are much more powerful and have a few very interesting characteristics:
+
+* Just like a custom process function you'd implement for the DataStream API,
+they provide you with access to persistent state and timers
+* Unlike scalar functions,
+they are table-valued functions,
+i.e. they work on tables as an input and produce a table as output
+* They are also polymorphic functions (in fact, PTFs are called polymorphic table functions in the SQL standard),
+which means that their input and output types are determined dynamically, rather than statically
+
+The polymorphic nature allows for extremely powerful customizations of your SQL queries,
+for instance there could be a PTF which exposes the contents of a Parquet file in a typed way,
+allowing for the projection of specific columns.
+Other potential use cases for custom PTFs include implement specific join semantics, custom aggregations, and much more.
+
+PTFs are a comprehensive extension to the Flink API and definitely warrant their own blog post at some point,
+for now let's just take a look at how to use a PTF for backfilling Postgres TOAST columns.
+Note that PTFs are still work-in-progress and details of the API may change.
+The following has been implemented against Flink built from source as of commit TODO.
+
+To create a PTF, create a sub-class of `ProcessTableFunction`, parameterized with the output type.
+In our case that's `Row`, as this PTF produces entire table rows.
+The processing logic needs to be implemented in a method named `eval()`,
+which takes any arguments and optionally a state carrier object as input:
 
 
+[source,sql,linenums=true]
+----
+public class ToastBackfillFunction extends ProcessTableFunction<Row> {
+
+  private static final String UNCHANGED_TOAST_VALUE =
+      "__debezium_unavailable_value";
+
+  public static class ToastState { // <1>
+    public String value;
+  }
+
+  public void eval(ToastState state, Row input, String column) { // <2>
+    Row newRowState = (Row) input.getField("after");
+
+    switch ((String)input.getField("op")) {
+      case "r", "c" -> { // <3>
+        state.value = (String) newRowState.getField(column);
+      }
+      case "u" -> { // <4>
+        if (UNCHANGED_TOAST_VALUE.equals(newRowState.getField(column))) {
+          newRowState.setField(column, state.value);
+        } else {
+          state.value = (String) newRowState.getField(column);
+        }
+      }
+    }
+
+    collect(input); // <5>
+  }
+}
+----
+<1> A custom state type for managing the persistent state of this PTF; stores the latest value for the given TOAST column
+<2> The `eval()` method will be invoked for each row to be aggregated; it declares the state type and two arguments for PTF: the table to process, and the name of the TOAST column
+<3> If the incoming event is an insert (`c`) or snapshot event (`r`), store the value of the specified TOAST column in the state store
+<4> If the incoming event is an update and the value of the TOAST column didn't, retrieve the value from the state store and update the input row with it; if the value did change, update the value in the state store
+<5> Emit the table row
+
+In most cases, semantics of the arguments of the `eval()` method can be specified using annotations such as `@StateHint` and `@ArgumentHint`.
+The TOAST backfill PTF is special in so far as that its output type can't be specified statically;
+instead it mirrors the type of the input table.
+For dynamic cases like this, the `getTypeInference()` method can be overridden,
+allowing you to declare the exact input and output type semantics for the method:
+ 
+[source,sql,linenums=true]
+----
+@Override
+public TypeInference getTypeInference(DataTypeFactory typeFactory) {
+  LinkedHashMap<String, StateTypeStrategy> stateTypeStrategies =
+      LinkedHashMap.newLinkedHashMap(1); // <1>
+  stateTypeStrategies.put("state",
+      StateTypeStrategy.of(
+          TypeStrategies.explicit(
+              DataTypes.of(ToastState.class).toDataType(typeFactory))));
+
+  return TypeInference.newBuilder()
+      .staticArguments( // <2>
+        StaticArgument.table( // <3>
+          "input",
+          Row.class,
+          false,
+          EnumSet.of(StaticArgumentTrait.TABLE_AS_SET)),
+        StaticArgument.scalar("column", DataTypes.STRING(), false) // <4>
+      )
+      .stateTypeStrategies(stateTypeStrategies) // <1>
+      .outputTypeStrategy(callContext -> // <5>
+          Optional.of(callContext.getArgumentDataTypes().get(0)))
+      .build();
+}
+----
+<1> Declares the state type of the PTF
+<2> Defines the arguments of the PTF
+<3> The first argument is the input table; it has "set" semantics, which means the method operates on partitioned sets of rows (as opposed to "row" semantics, in which case it would operate on individual rows of the table); the PTF's state is mentioned within the context of each of those partitioned sets; the argument is table row and it is not optional
+<4> The second argument is the name of the TOAST column to process; it is of type `String` and also not optional
+<5> The output type is excactly the same as the row type of the input table
+
+With that PTF definition in place, it can be invoked like this:
+
+[source,sql,linenums=true]
+----
+SELECT
+  id,
+  before,
+  after,
+  source,
+  op,
+  ts_ms 
+FROM 
+  ToastBackfill(TABLE authors PARTITION BY id, "biography"); -- <1>
+----
+<1> Invoke the PTF for the `authors` table, partioned by id, and backfilling values for the `biography` TOAST column
+
+Invoking a table-valued function might feel unusual at first,
+but on the upside the overall statement is quite a bit less complex than the `OVER` aggregation shown above.
 
 
 
@@ -223,3 +353,5 @@ check out https://github.com/gunnarmorling/streaming-examples/tree/main/debezium
 artie
 
 replica identity
+
+https://www.crunchydata.com/blog/logical-replication-from-postgres-to-iceberg
