--- a/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
+++ b/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
@@ -55,16 +55,16 @@ I'm really excited about all the innovation happening in this space right now.
 Now, you might wonder: "Do I really need streaming _(push)_, though? I'm fine with batch _(pull)_."
 
 That's a common and fair question.
-This is in my experience best answered by giving it a try yourself.
+In my experience, it is best answered by giving it a try yourself.
 Again and again I have seen how folks who were skeptical at first,
 very quickly wanted to get real-time streaming for more and more,
 if not all of their use cases,
-once they've seen it in action once.
+once they had seen it in action once.
 If you’ve experienced a data freshness of a second or two in your data warehouse,
-you don’t want to miss this magic again.
+you don’t want to ever miss this magic again.
 
 All that being said,
-it's  actually not even about pull _or_ push so much--the approaches complement each other.
+it's actually not even about pull _or_ push so much--the approaches complement each other.
 For instance, backfills often are done via batching, i.e. querying, in an otherwise streaming-based system.
 Also, if you want the completeness of streaming but don't require a super low latency,
 you may decide to suspend your streaming pipelines (thus saving cost) in times of low data volume,
