--- a/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
+++ b/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
@@ -1,5 +1,5 @@
 ---
-title: "\"Streaming vs. Batch\" Is a Wrong Dichotomy, and I Think It's Confusing."
+title: "\"Streaming vs. Batch\" Is a Wrong Dichotomy, and I Think It's Confusing"
 date: 2025-05-14T10:10:00+02:00
 draft: false
 markup: adoc
