--- a/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
+++ b/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
@@ -17,7 +17,7 @@ Often times, "Stream vs. Batch" is discussed as if it’s one _or_ the other, bu
 <!--more-->
 
 Many streaming systems will apply batching too, i.e. processing or transferring multiple records (a "batch") at once,
-thus setting off connection overhead, amortizing the cost of fanning out work to multiple threads,
+thus offsetting connection overhead, amortizing the cost of fanning out work to multiple threads,
 opening the door for highly efficient SIMD processing, etc., all to ensure high performance.
 The prevailing trend towards storage/compute separation in data streaming and processing architectures
 (for instance, thinking of platforms such as WarpStream, and link:blog/what-if-we-could-rebuild-kafka-from-scratch/[Diskless Kafka] at large)
